Fixed icos overlapping text when the module is right-aligned

--- a/MMM-MyWastePickup.css
+++ b/MMM-MyWastePickup.css
@@ -5,6 +5,7 @@
   padding: 0;
   border-bottom: solid 1px #222;
   position: relative;
+  text-align: left
 }
 
 .MMM-MyWastePickup .pickup-container .pickup-date {
